(library
 (name checker_core)
 (public_name checker.core)
 (modules instruction utils)
 (libraries unix))

(executable
 (name comparator)
 (modules comparator llvm_info sail_info_RV32 sail_info_RV64)
 (libraries checker_core))

(copy_files
 (mode
  (promote (until-clean)))
 (files ./llvm/llvm_info.ml))

(copy_files
 (mode
  (promote (until-clean)))
 (files ./sail/sail_info_RV32.ml))

(copy_files
 (mode
  (promote (until-clean)))
 (files ./sail/sail_info_RV64.ml))

(rule
 (target report.txt)
 (deps ./comparator.exe)
 (mode (promote))
 (action
  (with-stdout-to
   %{target}
   (run ./comparator.exe))))
