(rule
 (targets ./RISCV.td.json)
 (deps llvm19/RISCV.tar.xz)
 ;  (mode
 ;   (promote (until-clean)))
 (action
  (run tar -xvf %{deps})))

(rule
 (targets script.jq.online)
 (deps script.jq)
 (action
  (pipe-stdout
   (with-stdin-from
    %{deps}
    (run sed "/^#/d"))
   (with-stdout-to
    %{targets}
    (run tr "'\\n'" " ")))))

(rule
 (targets ./RISCV.instructions.json)
 (deps
  (:riscv ./RISCV.td.json)
  (:script script.jq.online))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (with-stdout-to
    %{targets}
    (run sh -c "jq -f %{script}  %{riscv} | jq ."))
   (run ls -lh %{targets})
   ;
   )))

(executable
 (name dissect)
 (modules dissect)
 (libraries yojson))

(rule
 (targets allkeys.json.txt allkeys.txt)
 (deps RISCV.instructions.json)
 (mode
  (promote (until-clean)))
 (action
  (run ./dissect.exe %{deps} -o allkeys.txt -get-keys)))
