(rule
 (targets ./RISCV.td.json)
 (deps llvm19/RISCV.tar.xz)
 (action
  (run tar -xvf %{deps})))

(rule
 (targets filter_llvm.jq.online)
 (deps filter_llvm.jq)
 (action
  (pipe-stdout
   (with-stdin-from
    %{deps}
    (run sed "/^#/d"))
   (with-stdout-to
    %{targets}
    (run tr "'\\n'" " ")))))

(rule
 (targets ./RISCV.instructions.json)
 (deps
  (:riscv ./RISCV.td.json)
  (:script filter_llvm.jq.online))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (with-stdout-to
    %{targets}
    (run sh -c "jq -f %{script} %{riscv} | jq ."))
   (run ls -lh %{targets}))))

(rule
 (targets allmnemonics.txt)
 (deps RISCV.instructions.json)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run sh -c "jq -r 'keys[]' %{deps}"))))
