(env
 (dev
  (flags
   (:standard -warn-error -unused-var-strict -warn-error -unused-var))))

(include dune.marshal)

(executable
 (name test1)
 (modules test1)
 (link_flags -linkall)
 (libraries libsail linenoise dynlink))

(executable
 (name assembly)
 (modules assembly)
 (libraries libsail yojson analysis myast_iterator))

(cram
 (applies_to run)
 (deps ./test1.exe))

(executable
 (name reload)
 (modules reload)
 (libraries yojson analysis))

(cram
 (applies_to reload)
 (deps ./reload.exe riscv.sail.json))

(library
 (name sail_ast_tools)
 (modules myast)
 (wrapped false)
 (libraries libsail ppx_deriving_yojson.runtime)
 (preprocess
  (pps ;
   ppx_deriving_yojson
   ppx_deriving.show)))

(library
 (name myast_iterator)
 (modules myast_iterator)
 (libraries sail_ast_tools))

(library
 (name analysis)
 (wrapped false)
 (modules analyzer)
 (libraries sail_ast_tools libsail ppx_deriving_yojson.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_deriving_yojson ppx_expect)))

(executable
 (name mysail)
 (modules mysail)
 (link_flags -linkall)
 (libraries libsail linenoise dynlink sail_ast_tools))

(cram
 (applies_to mysail)
 (deps
  ./test1.exe
  mysail.exe
  ;
  ))

(cram
 (applies_to mysail run)
 (deps
  ../sail-riscv/model/prelude.sail
  ../sail-riscv/model/riscv_xlen64.sail
  ../sail-riscv/model/riscv_flen_D.sail
  ../sail-riscv/model/riscv_vlen.sail
  ../sail-riscv/model/prelude_mem_metadata.sail
  ../sail-riscv/model/prelude_mem.sail
  ../sail-riscv/model/riscv_types_common.sail
  ../sail-riscv/model/riscv_types_ext.sail
  ../sail-riscv/model/riscv_types.sail
  ../sail-riscv/model/riscv_vmem_types.sail
  ../sail-riscv/model/riscv_reg_type.sail
  ../sail-riscv/model/riscv_freg_type.sail
  ../sail-riscv/model/riscv_regs.sail
  ../sail-riscv/model/riscv_pc_access.sail
  ../sail-riscv/model/riscv_sys_regs.sail
  ../sail-riscv/model/riscv_pmp_regs.sail
  ../sail-riscv/model/riscv_pmp_control.sail
  ../sail-riscv/model/riscv_ext_regs.sail
  ../sail-riscv/model/riscv_addr_checks_common.sail
  ../sail-riscv/model/riscv_addr_checks.sail
  ../sail-riscv/model/riscv_misa_ext.sail
  ../sail-riscv/model/riscv_vreg_type.sail
  ../sail-riscv/model/riscv_vext_regs.sail
  ../sail-riscv/model/riscv_csr_map.sail
  ../sail-riscv/model/riscv_vext_control.sail
  ../sail-riscv/model/riscv_next_regs.sail
  ../sail-riscv/model/riscv_sys_exceptions.sail
  ../sail-riscv/model/riscv_sync_exception.sail
  ../sail-riscv/model/riscv_next_control.sail
  ../sail-riscv/model/riscv_softfloat_interface.sail
  ../sail-riscv/model/riscv_fdext_regs.sail
  ../sail-riscv/model/riscv_fdext_control.sail
  ../sail-riscv/model/riscv_csr_ext.sail
  ../sail-riscv/model/riscv_sys_control.sail
  ../sail-riscv/model/riscv_platform.sail
  ../sail-riscv/model/riscv_mem.sail
  ../sail-riscv/model/riscv_vmem_common.sail
  ../sail-riscv/model/riscv_vmem_pte.sail
  ../sail-riscv/model/riscv_vmem_ptw.sail
  ../sail-riscv/model/riscv_vmem_tlb.sail
  ../sail-riscv/model/riscv_vmem.sail
  ../sail-riscv/model/riscv_types_kext.sail
  ../sail-riscv/model/riscv_insts_begin.sail
  ../sail-riscv/model/riscv_insts_base.sail
  ../sail-riscv/model/riscv_insts_aext.sail
  ../sail-riscv/model/riscv_insts_zca.sail
  ../sail-riscv/model/riscv_insts_mext.sail
  ../sail-riscv/model/riscv_insts_zicsr.sail
  ../sail-riscv/model/riscv_insts_next.sail
  ../sail-riscv/model/riscv_insts_zcd.sail
  ../sail-riscv/model/riscv_insts_svinval.sail
  ../sail-riscv/model/riscv_insts_zba.sail
  ../sail-riscv/model/riscv_insts_zbb.sail
  ../sail-riscv/model/riscv_insts_zbc.sail
  ../sail-riscv/model/riscv_insts_zbs.sail
  ../sail-riscv/model/riscv_insts_zcb.sail
  ../sail-riscv/model/riscv_insts_zfh.sail
  ../sail-riscv/model/riscv_insts_zfa.sail
  ../sail-riscv/model/riscv_insts_zkn.sail
  ../sail-riscv/model/riscv_insts_zks.sail
  ../sail-riscv/model/riscv_insts_zbkb.sail
  ../sail-riscv/model/riscv_insts_zbkx.sail
  ../sail-riscv/model/riscv_insts_zicond.sail
  ../sail-riscv/model/riscv_insts_vext_utils.sail
  ../sail-riscv/model/riscv_insts_vext_fp_utils.sail
  ../sail-riscv/model/riscv_insts_vext_vset.sail
  ../sail-riscv/model/riscv_insts_vext_arith.sail
  ../sail-riscv/model/riscv_insts_vext_fp.sail
  ../sail-riscv/model/riscv_insts_vext_mem.sail
  ../sail-riscv/model/riscv_insts_vext_mask.sail
  ../sail-riscv/model/riscv_insts_vext_vm.sail
  ../sail-riscv/model/riscv_insts_vext_fp_vm.sail
  ../sail-riscv/model/riscv_insts_vext_red.sail
  ../sail-riscv/model/riscv_insts_vext_fp_red.sail
  ../sail-riscv/model/riscv_jalr_seq.sail
  ../sail-riscv/model/riscv_insts_end.sail
  ../sail-riscv/model/riscv_step_common.sail
  ../sail-riscv/model/riscv_step_ext.sail
  ../sail-riscv/model/riscv_decode_ext.sail
  ../sail-riscv/model/riscv_fetch.sail
  ../sail-riscv/model/riscv_step.sail
  ../sail-riscv/model/riscv_insts_fext.sail
  ../sail-riscv/model/riscv_insts_zcf.sail
  ../sail-riscv/model/riscv_insts_dext.sail
  ../sail-riscv/model/riscv_insts_zcd.sail
  ../sail-riscv/model/riscv_insts_svinval.sail
  ../sail-riscv/model/riscv_insts_zba.sail
  ../sail-riscv/model/riscv_insts_zbb.sail
  ../sail-riscv/model/riscv_insts_zbc.sail
  ../sail-riscv/model/riscv_insts_zbs.sail
  ../sail-riscv/model/riscv_insts_zcb.sail
  ../sail-riscv/model/riscv_insts_zfh.sail
  ../sail-riscv/model/riscv_insts_zfa.sail
  ../sail-riscv/model/riscv_insts_zkn.sail
  ../sail-riscv/model/riscv_insts_zks.sail
  ../sail-riscv/model/riscv_insts_zbkb.sail
  ../sail-riscv/model/riscv_insts_zbkx.sail
  ../sail-riscv/model/riscv_insts_zicond.sail
  ../sail-riscv/model/riscv_insts_vext_utils.sail
  ../sail-riscv/model/riscv_insts_vext_fp_utils.sail
  ../sail-riscv/model/riscv_insts_vext_vset.sail
  ../sail-riscv/model/riscv_insts_vext_arith.sail
  ../sail-riscv/model/riscv_insts_vext_fp.sail
  ../sail-riscv/model/riscv_insts_vext_mem.sail
  ../sail-riscv/model/riscv_insts_vext_mask.sail
  ../sail-riscv/model/riscv_insts_vext_vm.sail
  ../sail-riscv/model/riscv_insts_vext_fp_vm.sail
  ../sail-riscv/model/riscv_insts_vext_red.sail
  ../sail-riscv/model/riscv_insts_vext_fp_red.sail
  ../sail-riscv/model/riscv_jalr_seq.sail
  ../sail-riscv/model/riscv_insts_end.sail
  ../sail-riscv/model/riscv_step_common.sail
  ../sail-riscv/model/riscv_step_ext.sail
  ../sail-riscv/model/riscv_decode_ext.sail
  ../sail-riscv/model/riscv_fetch.sail
  ../sail-riscv/model/riscv_step.sail
  ; Non command line passed but required files
  ../sail-riscv/model/mapping.sail
  ../sail-riscv/model/hex_bits.sail
  ../sail-riscv/model/hex_bits_signed.sail
  ;
  ))

(executable
 (name lookup)
 (modules lookup from6159 from6159_helper mnemonic_hashtbl)
 (preprocessor_deps
  ../json/work/ADD.json
  ../json/allkeys.txt
  ../json/allmnemonics.txt)
 (libraries yojson analysis myast_iterator stdune)
 (preprocess
  (pps ppx_deriving_yojson)))

(rule
 (target from6159.ml)
 (deps tmp/from6159.ml)
 (mode
  (promote (until-clean)))
 (action
  (copy tmp/from6159.ml %{target})))

(rule
 (target mnemonic_hashtbl.ml)
 (deps assembly.ml riscv.sail.json)
 (mode
  (promote (until-clean)))
 (action
  (run ./assembly.exe)))
