(env
 (dev
  (flags
   (:standard -warn-error -unused-var-strict -warn-error -unused-var))))

(include dune.marshal)

(executable
 (name assembly)
 (modules assembly)
 (libraries libsail yojson analysis myast_iterator))

(executable
 (name enums)
 (modules enums)
 (libraries libsail yojson analysis myast_iterator))

(library
 (name sail_ast_tools)
 (modules myast)
 (wrapped false)
 (libraries libsail ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show)))

(library
 (name myast_iterator)
 (modules myast_iterator)
 (libraries sail_ast_tools))

(library
 (name instruction)
 (modules instruction))

(library
 (name analysis)
 (wrapped false)
 (modules analyzer)
 (libraries sail_ast_tools libsail ppx_deriving_yojson.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_deriving_yojson ppx_expect)))

(executable
 (name mysail)
 (modules mysail)
 (link_flags -linkall)
 (libraries libsail linenoise dynlink sail_ast_tools))

(executable
 (name lookup)
 (modules lookup from6159 from6159_helper mnemonics enum_hashtbl)
 (preprocessor_deps ../json/allmnemonics.txt)
 (libraries yojson analysis myast_iterator stdune)
 (preprocess
  (pps ppx_deriving_yojson)))

(rule
 (target from6159.ml)
 (deps tmp/from6159.ml)
 (mode
  (promote (until-clean)))
 (action
  (copy tmp/from6159.ml %{target})))

(rule
 (target mnemonics.ml)
 (deps
  assembly.exe
  (:json riscv.sail.json))
 (mode
  (promote (until-clean)))
 (action
  (run
   ./assembly.exe
   -ocaml-ident
   mnemonics
   -ocaml-code
   mnemonics.ml
   -dump-assembly
   %{json})))

(rule
 (target enum_hashtbl.ml)
 (deps enums.ml riscv.sail.json)
 (mode
  (promote (until-clean)))
 (action
  (run ./enums.exe)))

(executable
 (name dump)
 (modules dump from6159 from6159_helper mnemonics)
 (libraries yojson analysis myast_iterator ocamlgraph))

(rule
 (targets out.ml graph1.dot)
 (mode (promote))
 (deps
  (:json ./riscv.sail.json)
  ./dump.exe)
 (action
  (run ./dump.exe -ocaml-code out.ml -ocaml-ident out -dump-execute %{json})))

(rule
 (targets graph1.svg)
 (mode (promote))
 (deps graph1.dot)
 (action
  (run
   dot
   -Tsvg
   %{deps}
   -o
   %{targets}
   ; neato
   ; -Nlen=1.8
   ; -Gmode=hier
   ; -Goverlap=false
   ; -Tpng
   ; %{deps}
   ; -o
   ; %{targets}
   )))
