; (env
;  (dev
;   (flags
;    (:standard -warn-error -unused-var))))

(rule
 (targets ./RISCV.td.json)
 (deps llvm_p_ext/RISCV.tar.xz)
 (action
  (run tar -xvf %{deps})))

(executable
 (public_name dump_llvm)
 (name dump)
 (libraries checker.core yojson str)
 (instrumentation
  (backend bisect_ppx)))

(rule
 (targets llvm_info.ml filtered.json)
 (deps
  (:json ./RISCV.td.json)
  ./dump.exe)
 (mode
  (promote (until-clean)))
 (action
  (run
   ./dump.exe
   -ocaml-code
   llvm_info.ml
   -ocaml-ident
   llvm_info
   -dump-llvm
   %{json}
   -o-filtered
   filtered.json)))
