; (env
;  (dev
;   (flags
;    (:standard -warn-error -unused-var))))

(rule
 (targets ./RISCV.td.json)
 (deps llvm19/RISCV.tar.xz)
 (action
  (run tar -xvf %{deps})))

(executable
 (name dump)
 (libraries checker.core yojson str))

(rule
 (targets llvm_info.ml filtered.json)
 (deps
  (:json ./RISCV.td.json)
  ./dump.exe)
 (mode
  (promote (until-clean)))
 (action
  (run
   ./dump.exe
   -ocaml-code
   llvm_info.ml
   -ocaml-ident
   llvm_info
   -dump-llvm
   %{json}
   -o-filtered
   filtered.json)))
