; (env
;  (dev
;   (flags
;    (:standard -warn-error -unused-var))))

(library
 (name sail_ast_tools)
 (modules myast myast_iterator)
 (wrapped false)
 (libraries libsail checker.core)
 (preprocess
  (pps ppx_deriving.show)))

(executable
 (name assembly)
 (modules assembly mysail spec)
 (libraries libsail dynlink sail_ast_tools checker.core))

(executable
 (name dump)
 (modules dump spec assembly call_graph mysail myconstant_propagation)
 (libraries dynlink sail_ast_tools ocamlgraph checker.core))

(executable
 (name init)
 (modules init mysail)
 (libraries dynlink sail_ast_tools))

(rule
 (targets z3_problems pp_ast.txt)
 (deps init.exe sail_files.txt)
 (mode (promote))
 (action
  (run ./init.exe -memo_z3 %{read-lines:sail_files.txt})))

(rule
 (targets sail_info.ml graph.dot)
 (deps dump.exe z3_problems sail_files.txt)
 (mode
  (promote (until-clean)))
 (action
  (run
   ./dump.exe
   -ocaml-code
   sail_info.ml
   -ocaml-ident
   sail_info
   --
   -memo_z3
   %{read-lines:sail_files.txt})))

(rule
 (targets graph.svg)
 (deps graph.dot)
 (mode
  (promote (until-clean)))
 (action
  (run dot -Tsvg %{deps} -o %{targets})))
