(env
 (dev
  (flags
   (:standard -warn-error -unused-var -warn-error -unused-var-strict))))

(library
 (public_name checker.sail_ast_tools)
 (name sail_ast_tools)
 (modules mysail myast myast_iterator)
 (wrapped false)
 (libraries libsail checker.core dynlink)
 (preprocess
  (pps ppx_deriving.show)))

(library
 (public_name checker.analysis_tools)
 (name analysis_tools)
 (modules spec assembly call_graph myconstant_propagation data_graph myanf)
 (libraries sail_ast_tools ocamlgraph checker.core)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (public_name dump_sail)
 (name dump)
 (modules dump)
 (libraries analysis_tools)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name init)
 (modules init)
 (libraries sail_ast_tools))

(executable
 (name gen)
 (modules gen))

(rule
 (targets z3_problems pp_ast_RV32.txt pp_ast_RV64.txt)
 (deps init.exe sail_files_RV32.txt sail_files_RV64.txt)
 (mode (promote))
 (action
  (run ./init.exe)))

(rule
 (deps gen.ml)
 (alias default)
 (mode (promote))
 (action
  (with-stdout-to
   dune.inc
   (run ./gen.exe))))

(include dune.inc)
