(rule
 (targets 05377.txt 06157.txt 06159.txt 06159.json 06160.txt)
 (mode
  (promote (until-clean)))
 (deps ../riscv.sail.json)
 (action
  (run ../reload.exe -dump-from %{deps})))

(rule
 (targets 06159dump.txt from6159.ml graph.dot)
 (mode (promote))
 (deps
  (:json 06159.json)
  ./dump2.exe)
 (action
  (run
   ./dump2.exe
   -ocaml-code
   from6159.ml
   -ocaml-ident
   from6159
   -dump-execute
   %{json})))

(rule
 (targets graph.png)
 (mode (promote))
 (deps graph.dot)
 (action
  (run
   ;dot -Tpng %{deps} -o %{targets}
   neato
   -Nlen=1.8
   -Gmode=hier
   -Goverlap=false
   -Tpng
   %{deps}
   -o
   %{targets})))

(executable
 (name dump2)
 (modules dump2)
 (libraries yojson analysis myast_iterator ocamlgraph))
