(rule
 (targets from6159.ml graph.dot)
 (mode (promote))
 (deps
  (:json ../riscv.sail.json)
  ./dump2.exe)
 (action
  (run
   ./dump2.exe
   -ocaml-code
   from6159.ml
   -ocaml-ident
   from6159
   -dump-execute
   %{json})))

(rule
 (targets graph.png)
 (mode (promote))
 (deps graph.dot)
 (action
  (run
   ;dot -Tpng %{deps} -o %{targets}
   neato
   -Nlen=1.8
   -Gmode=hier
   -Goverlap=false
   -Tpng
   %{deps}
   -o
   %{targets})))

(rule
 (target enum_hashtbl.ml)
 (deps ../enum_hashtbl.ml)
 (mode
  (promote (until-clean)))
 (action
  (run cp %{deps} %{target})))

(executable
 (name dump2)
 (modules dump2 enum_hashtbl)
 (libraries yojson analysis myast_iterator ocamlgraph))
